--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sqlite3": "^5.0.1"
   },
   "devDependencies": {
+    "@architect/sandbox": "^3.3.6",
     "@types/mysql": "^2.15.17",
     "@types/node": "^14.14.27",
     "@types/react": "^17.0.2",
